--- a/app/src/main/res/layout/activity_break.xml
+++ b/app/src/main/res/layout/activity_break.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ConstraintLayout"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#5b8a7f"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".break_activi">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ConstraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#5b8a7f"
+    tools:context=".break_activi">
 
 
     <Button
@@ -15,8 +14,6 @@
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginStart="@dimen/_54sdp"
-        android:layout_marginEnd="@dimen/_54sdp"
         android:layout_marginBottom="84dp"
         android:background="#1b2422"
         android:text="Skip"
@@ -26,7 +23,7 @@
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -34,12 +31,11 @@
         android:layout_width="74dp"
         android:layout_height="72dp"
         android:layout_marginTop="328dp"
-        android:layout_marginEnd="212dp"
         android:gravity="center"
         android:text="00"
         android:textColor="@color/white"
         android:textSize="@dimen/_44sdp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -47,12 +43,13 @@
         android:layout_width="186dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="112dp"
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/_26sdp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sec_view" />
 
     <TextView
@@ -60,25 +57,25 @@
         android:layout_width="74dp"
         android:layout_height="72dp"
         android:layout_marginTop="328dp"
-        android:layout_marginEnd="124dp"
         android:gravity="center"
         android:text="00"
         android:textColor="@color/white"
         android:textSize="@dimen/_44sdp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="44dp"
-        android:layout_height="69dp"
+        android:layout_width="21dp"
+        android:layout_height="85dp"
         android:layout_marginTop="328dp"
-        android:layout_marginEnd="184dp"
         android:gravity="center|top"
         android:text=":"
         android:textColor="@color/white"
         android:textSize="@dimen/_44sdp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
