--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutitem"
     android:layout_width="@dimen/_79sdp"
+    android:layout_height="@dimen/_89sdp"
     android:layout_marginStart="@dimen/_12sdp"
     android:layout_marginTop="@dimen/_12sdp"
     android:background="@drawable/items"
-    android:backgroundTint="#0c243c"
-    android:layout_height="@dimen/_89sdp">
+    android:backgroundTint="#0c243c">
 
 
     <TextView
@@ -19,10 +18,11 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginEnd="22dp"
-        android:textColor="@color/white"
         android:gravity="center"
         android:text="title"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time" />
 
@@ -34,10 +34,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="22dp"
         android:gravity="center"
-        android:textColor="@color/white"
         android:text="25"
+        android:textColor="@color/white"
         android:textSize="@dimen/_35sdp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
