--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -5,9 +5,7 @@
 
     <item
         android:id="@+id/statistics"
-        android:title="statistics" />
-    <item
-        android:id="@+id/gleavegroupitem"
-        android:title="Leave group" />
+        android:title="Report" />
+
 
 </menu>
