--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -11,7 +11,7 @@
         android:id="@+id/long_break"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="@dimen/_25sdp"
         app:barHeight="15dp"
         app:baseColor="@color/navy"
         app:circleFillColor="@color/green"
@@ -23,20 +23,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:maxValue="30"
         app:minValue="1"
         app:orientation="LEFT_TO_RIGHT"
         app:stepValue="1" />
-
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_height="wrap_content"
+        android:text="time for a long rest between sets (mins)"
+        android:textColor="@color/hint_text"
+        android:textSize="@dimen/_8sdp"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="552dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/long_break"/>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/white"
-
         android:layout_marginBottom="4dp"
+
         android:text="short break time"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/short_break"
@@ -63,12 +74,23 @@
         app:minValue="1"
         app:orientation="LEFT_TO_RIGHT"
         app:stepValue="1" />
-
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="time for a focus period (mins)"
+        android:textColor="@color/hint_text"
+        android:textSize="@dimen/_8sdp"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="552dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/focus_time"/>
     <com.mohammedalaa.seekbar.RangeSeekBarView
         android:id="@+id/short_break"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="@dimen/_25sdp"
         app:barHeight="15dp"
         app:baseColor="@color/navy"
         app:circleFillColor="@color/green"
@@ -80,11 +102,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:maxValue="15"
         app:minValue="1"
         app:orientation="LEFT_TO_RIGHT"
         app:stepValue="1" />
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_height="wrap_content"
+        android:text="time for a short rest between pomos (mins)"
+        android:textColor="@color/hint_text"
+        android:textSize="@dimen/_8sdp"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="552dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/short_break"/>
 
     <TextView
         android:id="@+id/textView"
@@ -93,7 +127,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="52dp"
         android:textColor="@color/white"
-
         android:layout_marginBottom="5dp"
         android:text="focus time"
         android:textStyle="bold"
@@ -119,7 +152,7 @@
         android:id="@+id/set"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="@dimen/_25sdp"
         app:barHeight="15dp"
         app:baseColor="@color/navy"
         app:circleFillColor="@color/green"
@@ -131,11 +164,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView8"
         app:maxValue="10"
         app:minValue="1"
         app:orientation="LEFT_TO_RIGHT"
         app:stepValue="1" />
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_height="wrap_content"
+        android:text="Focus time + break time is a set"
+        android:textColor="@color/hint_text"
+        android:textSize="@dimen/_8sdp"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="552dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/set"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -164,175 +209,29 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="377dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="9dp"
-        android:textColorHint="@color/white"
-        android:layout_marginEnd="11dp"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_38sdp"
+        android:layout_marginEnd="13dp"
         android:ems="10"
+        android:layout_marginStart="@dimen/_4sdp"
         android:hint="name"
         android:inputType="textPersonName"
         android:maxLength="30"
         android:maxLines="1"
         android:textColor="@color/white"
+        android:textColorHint="@color/hint_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.642"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="93dp"
 
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/set">
-
-
-        <ImageView
-            android:id="@+id/green"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="340dp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/green"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/blue"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="132dp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/blue"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <ImageView
-            android:id="@+id/red"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="184dp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/red"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/yellow"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="236dp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/yellow"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/black"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginStart="288dp"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:background="@drawable/circle"
-            android:backgroundTint="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:textColor="@color/white"
-            android:text="pick a color:"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <CheckBox
-            android:id="@+id/black_check"
-            android:layout_width="27dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/yellow_check"
-            app:layout_constraintTop_toBottomOf="@+id/black" />
-
-        <com.animsh.animatedcheckbox.AnimatedCheckBox
-            android:id="@+id/blue_check"
-            android:layout_width="27dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="137dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/blue"
-            app:border_stroke_width="2dp"
-            app:color_checked="#2A0088"
-            app:color_tick="@color/blue"
-            app:color_unchecked="@color/blue"
-            app:color_unchecked_stroke="@color/black"
-            app:small_tick="true"
-            app:tick_stroke_width="1dp" />
-
-
-        <com.animsh.animatedcheckbox.AnimatedCheckBox
-            android:id="@+id/red_check"
-            android:layout_width="27dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="1dp"
-            app:layout_constraintStart_toEndOf="@+id/blue_check"
-            app:layout_constraintTop_toBottomOf="@+id/red"
-            app:border_stroke_width="2dp"
-            app:color_checked="#EF0E21"
-            app:color_tick="@color/red"
-            app:color_unchecked="@color/red"
-            app:color_unchecked_stroke="@color/black"
-            app:small_tick="true"
-            app:tick_stroke_width="1dp"
-            />
-
-        <CheckBox
-            android:id="@+id/yellow_check"
-            android:layout_width="27dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/red_check"
-            app:layout_constraintTop_toBottomOf="@+id/yellow" />
-
-        <CheckBox
-            android:id="@+id/green_check"
-            android:layout_width="27dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="1dp"
-            app:layout_constraintStart_toEndOf="@+id/black_check"
-            app:layout_constraintTop_toBottomOf="@+id/green" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/create"
         android:backgroundTint="@null"
-        android:layout_width="341dp"
-        android:layout_height="55dp"
+        android:layout_width="@dimen/_250sdp"
+        android:layout_height="@dimen/_45sdp"
         android:layout_marginStart="@dimen/_54sdp"
         android:layout_marginTop="@dimen/_75sdp"
         android:layout_marginEnd="@dimen/_54sdp"
@@ -343,7 +242,9 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/set" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
