--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,13 @@
             android:id="@+id/ConstraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#0c243c">
+            android:background="@color/main_primery">
 
             <Button
                 android:id="@+id/start"
-                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                 android:layout_width="269dp"
                 android:layout_height="53dp"
-                android:layout_marginBottom="108dp"
+                android:layout_marginBottom="@dimen/_86sdp"
                 android:background="@drawable/bgbtngreen"
                 android:backgroundTint="@null"
                 android:text="Start"
@@ -98,7 +97,7 @@
                 android:id="@+id/stoptbtn"
                 android:layout_width="269dp"
                 android:layout_height="53dp"
-                android:layout_marginBottom="108dp"
+                android:layout_marginBottom="@dimen/_86sdp"
                 android:background="@drawable/bgbtnred"
                 android:text="stop"
                 android:textSize="@dimen/_17sdp"
@@ -158,6 +157,43 @@
                 android:textColor="@color/white"
                 app:layout_constraintStart_toEndOf="@+id/sec_view"
                 app:layout_constraintTop_toBottomOf="@+id/clock" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="53dp"
+                android:id="@+id/btn_layout"
+                android:layout_marginTop="1dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="@dimen/_86sdp"
+                android:weightSum="2"
+                >
+                <Button
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="53dp"
+                    android:text="Resume"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:id="@+id/resume"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bgbtngreen"
+                    android:backgroundTint="@null"
+                    />
+                <Button
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="53dp"
+                    android:text="Stop"
+                    android:textStyle="bold"
+                    android:background="@drawable/bgbtnred"
+                    android:textColor="@color/white"
+                    android:id="@+id/stop"
+                    android:layout_weight="1"
+                    />
+            </LinearLayout>
             <!--        <include-->
             <!--            android:id="@+id/include"-->
             <!--            layout="@layout/bottom_sheet"-->
@@ -173,6 +209,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <include
+            android:id="@+id/bottomsh"
             layout="@layout/bottom_sheet"/>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
