--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="main">#211D44</color>
     <color name="green">#48B9AC</color>
     <color name="red">#C80522</color>
+    <color name="hint_text">#E6A3A3A3</color>
+    <color name="main_primery">#172d66    </color>
+    <color name="dark_primery">#00023b    </color>
 </resources>
