--- a/app/src/main/res/layout/activity_break.xml
+++ b/app/src/main/res/layout/activity_break.xml
@@ -12,10 +12,11 @@
     <Button
         android:id="@+id/Skip"
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/_210sdp"
+        android:layout_height="@dimen/_50sdp"
         android:layout_marginBottom="84dp"
-        android:background="#1b2422"
+        android:background="@drawable/bgbtngreen"
+        android:backgroundTint="#1b2422"
         android:text="Skip"
         android:textColor="#73b0a2"
         android:textSize="@dimen/_17sdp"
