--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="hint_text">#E6A3A3A3</color>
     <color name="main_primery">#172d66    </color>
     <color name="dark_primery">#00023b    </color>
+    <color name="greenn">#88ba7d    </color>
 </resources>
