--- a/app/src/main/res/drawable/bottom_sheet.xml
+++ b/app/src/main/res/drawable/bottom_sheet.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:topRightRadius="@dimen/_33sdp"
      android:topLeftRadius="@dimen/_33sdp"/>
-    <solid android:color="#495594"/>
+    <solid android:color="#584e99"/>
 </shape>
