--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -14,16 +14,26 @@
         android:id="@+id/dit_layout"
         >
 
-        <TextView
-            android:id="@+id/dit_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:padding="@dimen/_8sdp"
-            android:textSize="@dimen/_11ssp"
-            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/dit_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_8sdp"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_15ssp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <View
 
             android:layout_width="match_parent"
@@ -54,6 +64,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
+                    android:textSize="@dimen/_13sdp"
                     android:text="Total rest"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -66,6 +77,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
+                    android:textSize="@dimen/_13sdp"
+
                     android:text="0M"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -80,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_13sdp"
                 android:layout_marginTop="1dp"
                 app:layout_constraintStart_toEndOf="@+id/totres"
                 app:layout_constraintTop_toTopOf="parent">
@@ -90,6 +103,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:textSize="@dimen/_13sdp"
+
                     android:layout_marginTop="1dp"
                     android:text="Total focus"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -102,6 +117,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:textSize="@dimen/_13sdp"
+
                     android:layout_marginTop="1dp"
                     android:text="0M"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_13sdp"
                 android:layout_marginTop="1dp"
                 app:layout_constraintStart_toEndOf="@+id/eeeee"
                 app:layout_constraintTop_toTopOf="parent">
@@ -127,6 +144,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
                     android:text="0M"
+                    android:textSize="@dimen/_13sdp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -139,6 +158,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
                     android:text="Day"
+                    android:textSize="@dimen/_13sdp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +171,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_13sdp"
                 android:layout_marginTop="1dp"
                 app:layout_constraintStart_toEndOf="@+id/da"
                 app:layout_constraintTop_toTopOf="parent">
@@ -162,6 +183,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
                     android:text="0M"
+                    android:textSize="@dimen/_13sdp"
+
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -172,6 +195,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:textSize="@dimen/_13sdp"
                     android:layout_marginTop="1dp"
                     android:text="Week"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -196,6 +220,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="1dp"
+                    android:textSize="@dimen/_13sdp"
+
                     android:text="0M"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -204,6 +230,8 @@
 
                 <TextView
                     android:id="@+id/month_tx"
+                    android:textSize="@dimen/_13sdp"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
